--- a/platformio.ini
+++ b/platformio.ini
@@ -8,10 +8,16 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32-c3-devkitm-1]
-platform = espressif32
-board = esp32-c3-devkitm-1
+[platformio]
+default_envs = nodemcuv2
+
+[env:nodemcuv2]
+platform = espressif8266
+board = d1_mini
 framework = arduino
+upload_speed = 230400
+monitor_speed = 115200
 lib_deps = 
 	dfrobot/DFRobotDFPlayerMini@^1.0.6
 	tzapu/WiFiManager@^2.0.17
+	plerup/EspSoftwareSerial@^8.2.0
